<resources>
    <string name="app_name">BigMood</string>
    <string name="action_settings">Settings</string>
    <string name="string_login_welcome">Welcome</string>
    <string name="string_login_error">We couldn\'t log you in, please try again</string>
    <string name="editmood_image_description">Displays either the color of the mood of the mood or a picture uploaded by the user.</string>
    <string-array name="editmood_moodspinner">
        <item>Happy</item>
        <item>Angry</item>
        <item>Scared</item>
        <item>Sad</item>
        <item>Surprised</item>
        <item>Disgusted</item>
        <item>Bored</item>
        <item>Touched</item>
    </string-array>

    <string-array name="editmood_moodcolor_spinner">
        <item name="Angry">#FF0101</item>
        <item name="Bored">#FE6301</item>
        <item name="Happy">#FFFF00</item>
        <item name="Touched">#AEFF00</item>
        <item name="Scared">#1AFF00</item>
        <item name="Surprised">#00B7FF</item>
        <item name="Sad">#0054FF</item>
        <item name="Disgusted">#CC00FF</item>
    </string-array>
    <string-array name="editmood_moodsituation_spinner">
        <item>in a group</item>
        <item>alone</item>
        <item>with family</item>
        <item>with another person</item>
    </string-array>
    <string name="mood_user_name">mood_user_name</string>
    <string name="mood_date">mood_date</string>

    <string-array name="userview_sortspinner">
        <item>Date (Desc)</item>
        <item>Date (Asc)</item>
    </string-array>
    <string name="user_view_filter_defaulttext">Filter by&#8230;</string>
    <string name="dashboard_recycler_header">How are the people you\'ve followed?</string>
    <string name="dashboard_recyclerUser_header">Your last post:</string>
    <string name="dashboard_empty_header">Looks like there\'s no one you\'re following, you can track their recent moods here.</string>
    <string name="dashboard_emptyUser_header">Looks like you haven\'t posted anything yet.</string>
    <string name="friends_recycler_header">Your friends:</string>
    <string name="friends_emptyUser_header">You have no friend requests. Why get some?</string>
    <string name="friends_empty_header">You have no friends. Why not make some?</string>
    <string name="friends_recyclerUser_header">Friend Requests:</string>
    <string name="moodName">Mood</string>
    <string name="placeholder1">placeholder1</string>
    <string name="placeholder2">placeholder2</string>

    <string name="dashboard">Dashboard</string>
    <string name="search">Search</string>
    <string name="friends">Friends</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_userId">UserID</string>
    <string name="username">Username</string>
    <string name="profile">My Profile</string>
    <string name="map">Map</string>
    <string name="gpsModeMenuUser">My Mood Locations</string>
    <string name="gpsModeMenuFollowed">My Friends Mood Locations</string>
    <string name="description">Description</string>
    <string name="search_hint">Search User</string>
</resources>
