<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="@string/moodName"
        android:textSize="20sp">

    </TextView>

    <TextView
        android:id="@+id/placeholder1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/placeholder1"
        android:textSize="16sp"
        android:layout_marginLeft="10dp">

    </TextView>

    <TextView
        android:id="@+id/placeholder2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/placeholder2"
        android:textSize="16sp"
        android:layout_marginLeft="10dp">

    </TextView>


</LinearLayout>