<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DashboardBackground"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/friendReq_recyclerViewUserHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friends_recyclerUser_header"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/friendReq_recyclerViewUserHeader" />

    <TextView
        android:id="@+id/friends_textView_emptyUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/friends_emptyUser_header"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/friendReq_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friends_recyclerViewHeader">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/friends_recyclerViewHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friends_recycler_header"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/friends_textView_emptyFriends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/friends_empty_header"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/friends_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        tools:layout_editor_absoluteY="60dp" />

</LinearLayout>