<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/default_background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DashboardActivity"
    tools:showIn="@layout/activity_dashboard">

    <TextView
        android:id="@+id/dashboard_recyclerViewUserHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dashboard_recyclerUser_header"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/dashboard_recyclerViewHeader" />

    <TextView
        android:id="@+id/dashboard_textView_emptyUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dashboard_emptyUser_header"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dashboard_recyclerviewUser"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashboard_recyclerViewUserHeader">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/dashboard_recyclerViewHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dashboard_recycler_header"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/dashboard_textView_emptyFriends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dashboard_empty_header"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dashboard_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        tools:layout_editor_absoluteY="60dp">

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>